--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -115,7 +115,7 @@
     {% endif %}
     {% if site.social.youtube %}
       <li>
-        <a href="https://www.youtube.com/user/{{ site.social.youtube }}" rel="noreferrer noopener" target="_blank" title="Youtube">
+        <a href="https://www.youtube.com/channel/{{ site.social.youtube }}" rel="noreferrer noopener" target="_blank" title="Youtube">
           {% include svg-icon.html icon="youtube" %}
         </a>
       </li>
