--- a/_includes/image.html
+++ b/_includes/image.html
@@ -4,4 +4,5 @@
     data-zooming-width="{{ assets[include.path-detail].dimensions.width }}"
     data-zooming-height="{{ assets[include.path-detail].dimensions.height }}"
   />
+  <figcaption class="figure-caption text-center">"{{ include.alt }}"</figcaption>
 </a>
